--- a/back-end/package.json
+++ b/back-end/package.json
@@ -24,6 +24,7 @@
 	},
 	"homepage": "https://github.com/gevichiatto/a-crud#readme",
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
