--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.21.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^5.0.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
