--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "f2",
+  "name": "aCrud - Sistema de Gerenciamento de Classes",
   "version": "0.1.0",
   "private": true,
   "scripts": {
