--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
     "vue": "^2.6.11",
+    "vue-picture-input": "^2.1.6",
     "vue-router": "^3.2.0",
     "vue-sweetalert2": "^5.0.2",
     "vuex": "^3.6.2"
