--- a/back-end/package.json
+++ b/back-end/package.json
@@ -29,6 +29,7 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"http": "0.0.1-security",
+		"image-data-uri": "^2.0.1",
 		"nodemon": "^2.0.15",
 		"pg": "^8.7.1",
 		"sequelize": "^6.12.0-alpha.1",
